@@ -10,17 +10,15 @@ import com.example.recipe.measurement.Measurement;
 import com.example.recipe.response.StatRes;
 import com.example.recipe.type.Type;
 import org.junit.jupiter.api.AfterEach;
-import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.jdbc.AutoConfigureTestDatabase;
 import org.springframework.boot.test.autoconfigure.orm.jpa.DataJpaTest;
-import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.test.context.ActiveProfiles;
 import org.springframework.test.context.ContextConfiguration;
 
-import java.sql.Date;
+import java.time.LocalDate;
 import java.util.*;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -29,7 +27,7 @@ import static org.junit.jupiter.api.Assertions.*;
 @DataJpaTest()
 @ContextConfiguration(classes = RecipeApplication.class)
 @AutoConfigureTestDatabase(replace = AutoConfigureTestDatabase.Replace.NONE)
-public class RecipeRepositoryTest {
+class RecipeRepositoryTest {
 
     @Autowired
     private RecipeRepository testRecipeRepository;
@@ -57,13 +55,13 @@ public class RecipeRepositoryTest {
                 true,
                 false,
                 false,
-                new Date(2022, 12, 12),
+                LocalDate.of(2022,12,12),
                 "test instructions",
-                Arrays.asList(new Category()),
-                Arrays.asList(new Type()),
+                List.of(new Category()),
+                List.of(new Type()),
                 account,
-                Arrays.asList(new Country()),
-                Arrays.asList(new Measurement())
+                List.of(new Country()),
+                List.of(new Measurement())
         );
 
         testRecipeRepository.save(recipe);
@@ -92,13 +90,13 @@ public class RecipeRepositoryTest {
                 false,
                 true,
                 false,
-                new Date(2022, 12, 12),
+                LocalDate.of(2022,12,12),
                 "test instructions",
-                Arrays.asList(new Category()),
-                Arrays.asList(new Type()),
+                List.of(new Category()),
+                List.of(new Type()),
                 account,
-                Arrays.asList(new Country()),
-                Arrays.asList(new Measurement())
+                List.of(new Country()),
+                List.of(new Measurement())
         );
 
         testRecipeRepository.save(recipe);
@@ -127,20 +125,19 @@ public class RecipeRepositoryTest {
                 false,
                 false,
                 false,
-                new Date(2022, 12, 12),
+                LocalDate.of(2022,12,12),
                 "test instructions",
-                Arrays.asList(new Category()),
-                Arrays.asList(new Type()),
+                List.of(new Category()),
+                List.of(new Type()),
                 account,
-                Arrays.asList(new Country()),
-                Arrays.asList(new Measurement())
+                List.of(new Country()),
+                List.of(new Measurement())
         );
 
         testRecipeRepository.save(recipe);
-        PageRequest page = PageRequest.of(0, 4);
 
-        Recipe foundEntity = testRecipeRepository.getByDate(account.getId(), new Date(2022, 12, 12)).orElse(null);
-        Recipe foundNoneEntity = testRecipeRepository.getByDate(0, new Date(2020, 10, 12)).orElse(null);
+        Recipe foundEntity = testRecipeRepository.getByDate(account.getId(), LocalDate.of(2022,12,12)).orElse(null);
+        Recipe foundNoneEntity = testRecipeRepository.getByDate(0, LocalDate.of(2022,12,10)).orElse(null);
         assertEquals("test title", foundEntity.getTitle());
         assertNotNull(foundEntity);
         assertNull(foundNoneEntity);
@@ -163,13 +160,13 @@ public class RecipeRepositoryTest {
                 false,
                 false,
                 false,
-                new Date(2022, 12, 12),
+                LocalDate.of(2022,12,12),
                 "test instructions",
-                Arrays.asList(new Category()),
-                Arrays.asList(new Type()),
+                List.of(new Category()),
+                List.of(new Type()),
                 account,
-                Arrays.asList(country),
-                Arrays.asList(new Measurement())
+                Collections.singletonList(country),
+                List.of(new Measurement())
         );
         Recipe recipe2 = new Recipe(
                 2,
@@ -183,13 +180,13 @@ public class RecipeRepositoryTest {
                 true,
                 true,
                 true,
-                new Date(2022, 12, 12),
+                LocalDate.of(2022,12,12),
                 "test instructions",
-                Arrays.asList(new Category()),
-                Arrays.asList(new Type()),
+                List.of(new Category()),
+                List.of(new Type()),
                 account,
-                Arrays.asList(country2),
-                Arrays.asList(new Measurement())
+                Collections.singletonList(country2),
+                List.of(new Measurement())
         );
 
         testRecipeRepository.save(recipe);
@@ -221,13 +218,13 @@ public class RecipeRepositoryTest {
                 false,
                 false,
                 true,
-                new Date(2022, 12, 12),
+                LocalDate.of(2022,12,12),
                 "test instructions",
-                Arrays.asList(new Category()),
-                Arrays.asList(new Type()),
+                List.of(new Category()),
+                List.of(new Type()),
                 account,
-                Arrays.asList(new Country()),
-                Arrays.asList(new Measurement())
+                List.of(new Country()),
+                List.of(new Measurement())
         );
         Recipe recipe2 = new Recipe(
                 2,
@@ -241,13 +238,13 @@ public class RecipeRepositoryTest {
                 false,
                 false,
                 false,
-                new Date(2022, 12, 12),
+                LocalDate.of(2022,12,12),
                 "test instructions",
-                Arrays.asList(new Category()),
-                Arrays.asList(new Type()),
+                List.of(new Category()),
+                List.of(new Type()),
                 account,
-                Arrays.asList(new Country()),
-                Arrays.asList(new Measurement())
+                List.of(new Country()),
+                List.of(new Measurement())
         );
 
         testRecipeRepository.save(recipe);
@@ -255,7 +252,6 @@ public class RecipeRepositoryTest {
 
         int foundEntity = testRecipeRepository.getDoneCount(account.getId()).orElse(null);
         int foundNoneEntity = testRecipeRepository.getDoneCount(0).orElse(null);
-        assertNotNull(foundEntity);
         assertEquals(1, foundEntity);
         assertEquals(0, foundNoneEntity);
     }
@@ -275,13 +271,13 @@ public class RecipeRepositoryTest {
                 false,
                 false,
                 false,
-                new Date(2022, 12, 12),
+                LocalDate.of(2022,12,12),
                 "test instructions",
-                Arrays.asList(new Category()),
-                Arrays.asList(new Type()),
+                List.of(new Category()),
+                List.of(new Type()),
                 account,
-                Arrays.asList(new Country()),
-                Arrays.asList(new Measurement())
+                List.of(new Country()),
+                List.of(new Measurement())
         );
         Recipe recipe2 = new Recipe(
                 2,
@@ -295,13 +291,13 @@ public class RecipeRepositoryTest {
                 true,
                 false,
                 false,
-                new Date(2022, 12, 12),
+                LocalDate.of(2022,12,12),
                 "test instructions",
-                Arrays.asList(new Category()),
-                Arrays.asList(new Type()),
+                List.of(new Category()),
+                List.of(new Type()),
                 account,
-                Arrays.asList(new Country()),
-                Arrays.asList(new Measurement())
+                List.of(new Country()),
+                List.of(new Measurement())
         );
 
         testRecipeRepository.save(recipe);
@@ -309,7 +305,6 @@ public class RecipeRepositoryTest {
 
         int foundEntity = testRecipeRepository.getFavouriteCount(account.getId()).orElse(null);
         int foundNoneEntity = testRecipeRepository.getFavouriteCount(0).orElse(null);
-        assertNotNull(foundEntity);
         assertEquals(1, foundEntity);
         assertEquals(0, foundNoneEntity);
     }
@@ -329,13 +324,13 @@ public class RecipeRepositoryTest {
                 false,
                 true,
                 false,
-                new Date(2022, 12, 12),
+                LocalDate.of(2022,12,12),
                 "test instructions",
-                Arrays.asList(new Category()),
-                Arrays.asList(new Type()),
+                List.of(new Category()),
+                List.of(new Type()),
                 account,
-                Arrays.asList(new Country()),
-                Arrays.asList(new Measurement())
+                List.of(new Country()),
+                List.of(new Measurement())
         );
         Recipe recipe2 = new Recipe(
                 2,
@@ -349,13 +344,13 @@ public class RecipeRepositoryTest {
                 false,
                 false,
                 false,
-                new Date(2022, 12, 12),
+                LocalDate.of(2022,12,12),
                 "test instructions",
-                Arrays.asList(new Category()),
-                Arrays.asList(new Type()),
+                List.of(new Category()),
+                List.of(new Type()),
                 account,
-                Arrays.asList(new Country()),
-                Arrays.asList(new Measurement())
+                List.of(new Country()),
+                List.of(new Measurement())
         );
 
         testRecipeRepository.save(recipe);
@@ -363,7 +358,6 @@ public class RecipeRepositoryTest {
 
         int foundEntity = testRecipeRepository.getDoLaterCount(account.getId()).orElse(null);
         int foundNoneEntity = testRecipeRepository.getDoLaterCount(0).orElse(null);
-        assertNotNull(foundEntity);
         assertEquals(1, foundEntity);
         assertEquals(0, foundNoneEntity);
     }
@@ -383,13 +377,13 @@ public class RecipeRepositoryTest {
                 true,
                 false,
                 false,
-                new Date(2022, 12, 12),
+                LocalDate.of(2022,12,12),
                 "test instructions",
-                Arrays.asList(new Category()),
-                Arrays.asList(new Type()),
+                List.of(new Category()),
+                List.of(new Type()),
                 account,
-                Arrays.asList(new Country()),
-                Arrays.asList(new Measurement())
+                List.of(new Country()),
+                List.of(new Measurement())
         );
 
         testRecipeRepository.save(recipe);
